--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.4.1
 backports.entry-points-selectable==1.1.1
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 distlib==0.3.4
 Django==4.0
 filelock==3.4.0
 gunicorn==20.1.0
+django-heroku==0.3.1
 Pillow==8.4.0
 platformdirs==2.4.0
 pypi-install==0.0.5
